--- a/packages/website/src/pages/api/svelte/api-pages.njk
+++ b/packages/website/src/pages/api/svelte/api-pages.njk
@@ -14,6 +14,9 @@ eleventyComputed:
 {% from "../_includes/class.njk" import classPage %}
 {% from "../_includes/function.njk" import functionPage %}
 {% from "../_includes/typealias.njk" import typealiasPage %}
+{% from "../_includes/macros.njk" import displayBreadcrumb %}
+
+{{ displayBreadcrumb(def) }}
 
 {% if def.kindString === 'store creator' %}
   {% include "./_includes/store.njk" %}
