--- a/packages/website/src/pages/api/angular/api-pages.njk
+++ b/packages/website/src/pages/api/angular/api-pages.njk
@@ -13,6 +13,9 @@ eleventyComputed:
 
 {% from "../_includes/class.njk" import classPage %}
 {% from "../_includes/typealias.njk" import typealiasPage %}
+{% from "../_includes/macros.njk" import displayBreadcrumb %}
+
+{{ displayBreadcrumb(def) }}
 
 {% if def.kindString === 'component' %}
   {% include "./_includes/component.njk" %}
