website: various fixes and alterations.
1. Now using colored logo for navigation bar and favicon.

2. Added new hamburger menu since old one did not work on mobile.

3. Fixed various tutorial links.

4. Added Magnify to future.

5. Added DateGallery to main component hub.

--- a/packages/website/src/_includes/components/docsnav.njk
+++ b/packages/website/src/_includes/components/docsnav.njk
@@ -2,7 +2,7 @@
 <aside class="text-lg mb-8 xl:w-64 xl:mr-12 xl:shrink-0 xl:sticky xl:top-16 xl:self-start">
  
   <button
-    class="flex items-center justify-between text-xl font-medium text-gray-900 w-full my-4 xl:hidden"
+    class="flex items-center justify-between text-xl font-medium text-gray-900 w-full my-4 xl:hidden dark:text-white"
   >
     <span>Docs navigation</span>
   </button>
