--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="/images/favicon.png" sizes="any">
     <!-- 32×32 -->
-    <link rel="icon" href="/images/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
