--- a/packages/website/src/pages/docs/date-gallery/date-gallery.njk
+++ b/packages/website/src/pages/docs/date-gallery/date-gallery.njk
@@ -15,10 +15,10 @@ keywords: "uiloos DateGallery docs, DateGallery, DateGallery docs"
 
   <a 
     class="card" 
-    href="/docs/active-list/concepts/"
+    href="/docs/date-gallery/concepts/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Concept</div>
+      <div class="text-normal font-medium mb-1">Concepts</div>
       <div class="text-sm">Learn the concepts behind the DateGallery</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
@@ -28,11 +28,11 @@ keywords: "uiloos DateGallery docs, DateGallery, DateGallery docs"
 
    <a 
     class="card" 
-    href="/docs/active-list/tutorial/"
+    href="/docs/date-gallery/tutorials/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Tutorial</div>
-      <div class="text-sm">Take the tutorial and build a datepicker</div>
+      <div class="text-normal font-medium mb-1">Tutorials</div>
+      <div class="text-sm">Take a look at the tutorials and learn how to create a date picker, or learn how to create a week calendar.</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
@@ -41,7 +41,7 @@ keywords: "uiloos DateGallery docs, DateGallery, DateGallery docs"
 
   <a 
     class="card" 
-    href="/docs/active-list/usage-with-frameworks/"
+    href="/docs/date-gallery/usage-with-frameworks/"
   >
     <div>
       <div class="text-normal font-medium mb-1">Usage with Frameworks</div>
@@ -54,7 +54,7 @@ keywords: "uiloos DateGallery docs, DateGallery, DateGallery docs"
 
   <a 
     class="card" 
-    href="/docs/active-list/examples/"
+    href="/docs/date-gallery/examples/"
   >
     <div>
       <div class="text-normal font-medium mb-1">Examples</div>
