--- a/packages/website/src/pages/docs/miscellaneous/future.njk
+++ b/packages/website/src/pages/docs/miscellaneous/future.njk
@@ -49,5 +49,12 @@ keywords: "uiloos future, uiloos roadmap"
         the many pagination variants out there.
       </p>
     </div>
+
+    <div class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full">
+      <h3 class="high leading-snug tracking-tight mb-1">Magnify</h3>
+      <p class="text-gray-800 dark:text-white text-center">
+        A component to create image magnifiers with. 
+      </p>
+    </div>
   </div>
 </article>
