--- a/packages/website/src/pages/docs/typewriter/typewriter.njk
+++ b/packages/website/src/pages/docs/typewriter/typewriter.njk
@@ -18,7 +18,7 @@ keywords: "uiloos Typewriter docs, Typewriter, Typewriter docs"
     href="/docs/typewriter/concepts/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Concept</div>
+      <div class="text-normal font-medium mb-1">Concepts</div>
       <div class="text-sm">Learn the concepts behind the Typewriter</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
@@ -28,10 +28,10 @@ keywords: "uiloos Typewriter docs, Typewriter, Typewriter docs"
 
   <a
     class="card"
-    href="/docs/typewriter/tutorial/"
+    href="/docs/typewriter/tutorials/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Tutorial</div>
+      <div class="text-normal font-medium mb-1">Tutorials</div>
       <div class="text-sm">Learn how to style a Typewriter</div>
     </div>
     <svg
