--- a/packages/website/src/pages/docs/view-channel/view-channel.njk
+++ b/packages/website/src/pages/docs/view-channel/view-channel.njk
@@ -18,7 +18,7 @@ keywords: "uiloos ViewChannel docs, ViewChannel, ViewChannel docs"
     href="/docs/view-channel/concepts/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Concept</div>
+      <div class="text-normal font-medium mb-1">Concepts</div>
       <div class="text-sm">Learn the concepts behind the ViewChannel</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
