--- a/packages/website/src/styles/main.scss
+++ b/packages/website/src/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'additional-styles/theme.scss';
 @import 'additional-styles/prism.scss';
 @import 'additional-styles/typewriter-composer.scss';
+@import 'additional-styles/hamburger.scss';
 
 @tailwind utilities;
 
