--- a/packages/website/src/_includes/components/footer.njk
+++ b/packages/website/src/_includes/components/footer.njk
@@ -60,7 +60,7 @@
                 value=""
                 placeholder="Your email"
                 name="EMAIL"
-                class="form-input w-full text-gray-800 px-3 py-2 pr-12 text-sm dark:text-white dark:bg-gray-900"
+                class="w-full text-gray-800 px-3 py-2 pr-12 text-sm dark:text-white dark:bg-gray-900"
                 id="mce-EMAIL"
                 required
               />
