--- a/packages/website/src/pages/docs/active-list/active-list.njk
+++ b/packages/website/src/pages/docs/active-list/active-list.njk
@@ -18,7 +18,7 @@ keywords: "uiloos ActiveList docs, ActiveList, ActiveList docs"
     href="/docs/active-list/concepts/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Concept</div>
+      <div class="text-normal font-medium mb-1">Concepts</div>
       <div class="text-sm">Learn the concepts behind the ActiveList</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
@@ -28,11 +28,11 @@ keywords: "uiloos ActiveList docs, ActiveList, ActiveList docs"
 
    <a 
     class="card" 
-    href="/docs/active-list/tutorial/"
+    href="/docs/active-list/tutorials/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Tutorial</div>
-      <div class="text-sm">Take the tutorial and build a carousel</div>
+      <div class="text-normal font-medium mb-1">Tutorials</div>
+      <div class="text-sm">View tutorials and learn how to build various carousels</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
