website: fixed hamburger and api navigation in dark mode
The hamburger menu was black, and the api navigation header was not
white in dark mode.

--- a/packages/website/src/_includes/components/apinav.njk
+++ b/packages/website/src/_includes/components/apinav.njk
@@ -4,7 +4,7 @@
   <button
     class="flex items-center justify-between text-xl font-medium text-gray-900 w-full my-4 xl:hidden"
   >
-    <span>API navigation</span>
+    <span class="dark:text-white">API navigation</span>
   </button>
 
   <nav class="mt-4 xl:block">
