--- a/packages/website/src/_includes/components/navigation.njk
+++ b/packages/website/src/_includes/components/navigation.njk
@@ -87,10 +87,10 @@
           :class="{ 'active': expanded }"
           aria-hidden="true"
          >
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="dark:bg-white"></li>
+          <li class="dark:bg-white"></li>
+          <li class="dark:bg-white"></li>
+          <li class="dark:bg-white"></li>
         </ul>
       </button>
 
