website: migrated from Codesandbox to StackBlitz
The reason is that `Codesandbox` no longer has free devboxes which made
having loads of examples very expensive.

StackBlitz still runs completely in the browser and is free. It also
allows you to show examples straight from GitHub. All examples now have
a detail page and will show a StackBlitz embed.

--- a/packages/website/src/pages/docs/active-list/examples.njk
+++ b/packages/website/src/pages/docs/active-list/examples.njk
@@ -18,7 +18,7 @@ keywords: "ActiveList examples, ActiveList carousel example, ActiveList tabs exa
 
   <div class="grid lg:grid-cols-2 gap-4">
     {% for example in examples %}
-      {% if example.for === 'ActiveList' %}
+      {% if example.component === 'ActiveList' %}
         {% include "../../../_includes/components/example.njk" %}
       {% endif %}
     {% endfor %}
