--- a/packages/website/src/pages/docs/active-list/tutorials/basic.njk
+++ b/packages/website/src/pages/docs/active-list/tutorials/basic.njk
@@ -75,7 +75,7 @@ keywords: "ActiveList tutorial, ActiveList basic carousel tutorial"
 
     <p>
       To get started with the tutorial open and fork this 
-      <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/carousel-starter-vanilla-wtojsg" class="underline text-purple-600">sandbox</a>.
+      <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-xumo5z?file=carousel.js" class="underline text-purple-600">StackBlitz</a>.
       By using the sandbox you do not have to worry to much about setting
       up an entire development environment.
     </p>
@@ -778,7 +778,7 @@ onAutoPlayPlaying(event, carousel) {
     <h2 id="full-code"><a href="#full-code">12. Full code</a></h2>
 
      <p>
-      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/activelist-vanilla-xmf5zj?file=/examples/classic-carousel/classic-carousel.js:1630-2151" class="underline text-purple-600">reference implementation of a classic carousel in vanilla JS. </a>
+      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/uiloos-examples-q4qxcx?file=examples%2Fclassic-carousel%2Fclassic-carousel.js&preset=node" class="underline text-purple-600">reference implementation of a classic carousel in vanilla JS. </a>
     </p>
   </section>
 
