--- a/packages/website/src/pages/docs/active-list/tutorials/snap.njk
+++ b/packages/website/src/pages/docs/active-list/tutorials/snap.njk
@@ -79,7 +79,7 @@ keywords: "ActiveList tutorial, ActiveList snap carousel tutorial"
 
     <p>
       To get started with the tutorial open and fork this 
-      <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/activelist-snap-carousel-tutorial-qr7st5?file=/index.html" class="underline text-purple-600">sandbox</a>.
+      <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-wq6zas?file=carousel.js" class="underline text-purple-600">StackBlitz</a>.
       By using the sandbox you do not have to worry to much about setting
       up an entire development environment.
     </p>
@@ -734,8 +734,8 @@ window.setTimeout(() => {
     <h2 id="full-code"><a href="#full-code">11. Full code</a></h2>
 
      <p>
-      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/activelist-vanilla-xmf5zj?file=/examples/peek-ahead-carousel/peek-ahead-carousel.js" class="underline text-purple-600">reference implementation of a peek ahead carousel in JavaScript</a>,
-      and here the <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/activelist-vanilla-xmf5zj?file=/examples/snap-carousel/snap-carousel.js" class="underline text-purple-600">reference implementation of a non peak ahead carousel in JavaScript</a>
+      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/uiloos-examples-q4qxcx?file=examples%2Fpeek-ahead-carousel%2Fpeek-ahead-carousel.js&preset=node" class="underline text-purple-600">reference implementation of a peek ahead carousel in JavaScript</a>,
+      and here the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/uiloos-examples-q4qxcx?file=examples%2Fsnap-carousel%2Fsnap-carousel.js&preset=node" class="underline text-purple-600">reference implementation of a non peak ahead carousel in JavaScript</a>
     </p>
   </section>
 
