--- a/packages/website/src/pages/docs/date-gallery/tutorials/datepicker.njk
+++ b/packages/website/src/pages/docs/date-gallery/tutorials/datepicker.njk
@@ -82,7 +82,7 @@ keywords: "DateGallery tutorial, DateGallery datepicker tutorial"
 
     <p>
       To get started with the tutorial open and fork this 
-      <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/p/devbox/dategallery-datepicker-tutorial-75xvgg" class="underline text-purple-600">sandbox</a>.
+      <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-er18kn?file=datepicker.js" class="underline text-purple-600">StackBlitz</a>.
       By using the sandbox you do not have to worry to much about setting
       up an entire development environment.
     </p>
@@ -830,11 +830,11 @@ this.dateGallery = null;
     <h2 id="full-code"><a href="#full-code">16. Full code</a></h2>
 
     <p>
-      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/p/devbox/nostalgic-matsumoto-r4vvxf" class="underline text-purple-600">complete code for this tutorial.</a>
+      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-fqg1yy?file=datepicker.js" class="underline text-purple-600">complete code for this tutorial.</a>
     </p>
 
      <p>
-      A more fully fledged example can be found here at the <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/p/devbox/dategallery-vanilla-snf4xr" class="underline text-purple-600">reference implementation of a datepicker in vanilla JS.</a>
+      A more fully fledged example can be found here at the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/uiloos-examples-kykmok?file=examples%2Fdatepicker%2Fdatepicker.js&preset=node" class="underline text-purple-600">reference implementation of a datepicker in vanilla JS.</a>
       It also shows you how to create a date range picker, and how to create a calendar.
     </p>
   </section>
