--- a/packages/website/src/pages/docs/date-gallery/tutorials/week-calendar.njk
+++ b/packages/website/src/pages/docs/date-gallery/tutorials/week-calendar.njk
@@ -75,7 +75,7 @@ keywords: "DateGallery tutorial, DateGallery week calendar tutorial"
 
     <p>
       To get started with the tutorial open and fork this 
-      <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/p/devbox/dategallery-week-calendar-tutorial-9cmts9?file=%2Fcalendar.js" class="underline text-purple-600">sandbox</a>.
+      <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-p725kv?file=calendar.js" class="underline text-purple-600">StackBlitz</a>.
       By using the sandbox you do not have to worry to much about setting
       up an entire development environment.
     </p>
@@ -657,13 +657,13 @@ buttonEl.onclick = () => {
     <h2 id="full-code"><a href="#full-code">13. Full code</a></h2>
 
      <p>
-      <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/p/devbox/dategallery-week-calendar-tutorial-finished-js32pm" class="underline text-purple-600">This is the finished code for this tutorial</a>, 
+      <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-nzktrv?file=calendar.js" class="underline text-purple-600">This is the finished code for this tutorial</a>, 
       for reference.
     </p>
 
     <p>
       A week calendar is one thing but how about a calendar with day, week, year 
-      and month modes. Take a look a the <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/p/devbox/dategallery-vanilla-snf4xr" class="underline text-purple-600">reference implementation of a calendar in vanilla JS.</a>
+      and month modes. Take a look a the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/uiloos-examples-kykmok?file=examples%2Fcalendar%2Fcalendar.js&preset=node" class="underline text-purple-600">reference implementation of a calendar in vanilla JS.</a>
     </p>
 
     <p>
