--- a/packages/website/src/pages/docs/typewriter/tutorials/multi-cursor.njk
+++ b/packages/website/src/pages/docs/typewriter/tutorials/multi-cursor.njk
@@ -38,6 +38,9 @@ keywords: "Typewriter multi cursor tutorial"
       <li class="ml-8">
         <a href="#further-reading" class="text-purple-600 underline">Further reading</a>
       </li>
+      <li class="ml-8">
+        <a href="#full-code" class="text-purple-600 underline">Full code</a>
+      </li>
     </ol>
   </nav>
 
@@ -57,7 +60,7 @@ keywords: "Typewriter multi cursor tutorial"
 
     <p>
       To get started with the tutorial open and fork this 
-      <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/typewriter-multi-cursor-tutorial-ff4q2c?file=/main.js" class="underline text-purple-600">sandbox</a>.
+      <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-bjyxxe?file=main.js" class="underline text-purple-600">StackBlitz</a>.
       By using the sandbox you do not have to worry to much about setting
       up an entire development environment.
     </p>
@@ -538,10 +541,6 @@ function subscriber(typewriter) {
        To achieve this I set the delay to 2 seconds in the "config" in the "main.js" 
        in the action that comes after the "mouse" action.
     </p>
-
-    <p>
-      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/typewriter-multi-cursor-tutorial-finished-98ty2n?file=/main.js" class="underline text-purple-600">full code</a>.
-    </p>
   </section>
 
   <section>
@@ -559,6 +558,14 @@ function subscriber(typewriter) {
         contrast this with <a href="/docs/typewriter/examples/" class="underline">the examples that use a framework</a>.
       </li>
     </ol>
+  </section>
+
+   <section>
+    <h2 id="full-code"><a href="#full-code">9. Full code</a></h2>
+
+    <p>
+      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-xgjutd?file=main.js" class="underline text-purple-600">full code for this tutorial</a>.
+    </p>
   </section>
 
   <a 
