--- a/packages/website/src/pages/docs/typewriter/tutorials/single-cursor.njk
+++ b/packages/website/src/pages/docs/typewriter/tutorials/single-cursor.njk
@@ -35,6 +35,9 @@ keywords: "Typewriter single cursor tutorial"
       <li class="ml-8">
         <a href="#further-reading" class="text-purple-600 underline">Further reading</a>
       </li>
+      <li class="ml-8">
+        <a href="#full-code" class="text-purple-600 underline">Full code</a>
+      </li>
     </ol>
   </nav>
 
@@ -48,7 +51,7 @@ keywords: "Typewriter single cursor tutorial"
 
     <p>
       To get started with the tutorial open and fork this 
-      <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/typewriter-single-cursor-tutorial-7xgtpr?file=/main.js" class="underline text-purple-600">sandbox</a>.
+      <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-14ymqp?file=main.js" class="underline text-purple-600">StackBlitz</a>.
       By using the sandbox you do not have to worry to much about setting
       up an entire development environment.
     </p>
@@ -311,11 +314,6 @@ function subscriber(typewriter) {
     </p>
 
     <img class="mb-8" src="/images/typewriter-tutorial/singlecursor-blinking.gif" alt="A styled animation looping over matrix quotes showing a blinking cursor" />
-
-    <p>
-      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/typewriter-single-cursor-tutorial-finished-nrwn9w?file=/main.js" class="underline text-purple-600">full code</a>.
-    </p>
-
   </section>
 
   <section>
@@ -334,6 +332,14 @@ function subscriber(typewriter) {
         contrast this with <a href="/docs/typewriter/examples/" class="underline">the examples that use a framework</a>.
       </li>
     </ol>
+  </section>
+
+  <section>
+    <h2 id="full-code"><a href="#full-code">8. Full code</a></h2>
+
+    <p>
+      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-cv1e1p?file=main.js" class="underline text-purple-600">full code for this tutorial</a>.
+    </p>
   </section>
 
   <a 
