--- a/packages/website/src/pages/docs/view-channel/tutorial.njk
+++ b/packages/website/src/pages/docs/view-channel/tutorial.njk
@@ -53,6 +53,9 @@ keywords: "ViewChannel tutorial, ViewChannel flash message tutorial"
       <li class="ml-8">
         <a href="#further-reading" class="text-purple-600 underline">Further reading</a>
       </li>
+       <li class="ml-8">
+        <a href="#full-code" class="text-purple-600 underline">Full code</a>
+      </li>
     </ol>
   </nav>
 
@@ -77,7 +80,7 @@ keywords: "ViewChannel tutorial, ViewChannel flash message tutorial"
 
     <p>
       To get started with the tutorial open and fork this 
-      <a target="_blank" rel="noopener noreferrer" href="https://codesandbox.io/s/viewchannel-tutorial-c9gm55" class="underline text-purple-600">sandbox</a>.
+      <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-zftjm4?file=scripts%2Fflash-message.js" class="underline text-purple-600">StackBlitz</a>.
       By using the sandbox you do not have to worry to much about setting
       up an entire development environment.
     </p>
@@ -786,6 +789,14 @@ onAutoDismissPaused(event) {
       </li>
     </ol>
   </section> 
+
+  <section>
+    <h2 id="full-code"><a href="#full-code">14. Full code</a></h2>
+
+    <p>
+      For reference here is the <a target="_blank" rel="noopener noreferrer" href="https://stackblitz.com/edit/stackblitz-starters-bdbbr8?file=scripts%2Fflash-message.js" class="underline text-purple-600">full code for this tutorial.</a> 
+    </p>
+  </section>
 
    <a 
     class="card" 
