--- a/packages/website/src/_includes/components/example.njk
+++ b/packages/website/src/_includes/components/example.njk
@@ -1,30 +1,28 @@
 <a 
   class="example-card" 
-  href="{{ example.url }}"
+  href="/docs/{{example.url}}/examples/{{example.framework | slug}}"
 >
   <div class="flex flex-col h-full">
     <div class="text-normal font-medium mb-4">{{ example.text }}</div>
     <div class="grow mb-4">{{ example.description | safe }}</div>
     <div class="justify-self-end flex items-center gap-4 text-sm">
-      {% for tag in example.tags %}
-        {% if tag === 'JavaScript' %}
-          <img src="/images/frameworks/vanilla.svg" class="w-12 h-12 p-1" loading="lazy" alt="JavaScript logo"/>
-        {% elif tag === 'React' %}
-          <img src="/images/frameworks/react.svg" class="w-12 h-12 p-1" loading="lazy" alt="React logo"/>
-        {% elif tag === 'Vue' %}
-          <img src="/images/frameworks/vue.svg" class="w-12 h-12 p-1" loading="lazy" alt="Vue logo"/>
-        {% elif tag === 'Angular' %}
-          <img src="/images/frameworks/angular.svg" class="w-12 h-12 p-1" loading="lazy" alt="Angular logo"/>
-        {% elif tag === 'Svelte' %}
-          <img src="/images/frameworks/svelte.svg" class="w-12 h-12 p-1" loading="lazy" alt="Svelte logo"/>
-        {% elif tag === 'Alpine' %}
-          <img src="/images/frameworks/alpine.svg" class="w-12 h-12 p-1" loading="lazy" alt="Alpine logo"/>
-        {% else %}
-          <span class="text-center text-white font-bold py-1 px-3 rounded-full bg-purple-500">
-            {{ tag }}
-          </span>
-        {% endif %}
-      {% endfor %}
+      {% if example.framework === 'Vanilla' %}
+        <img src="/images/frameworks/vanilla.svg" class="w-12 h-12 p-1" loading="lazy" alt="JavaScript logo"/>
+      {% elif example.framework === 'React' %}
+        <img src="/images/frameworks/react.svg" class="w-12 h-12 p-1" loading="lazy" alt="React logo"/>
+      {% elif example.framework === 'Vue' %}
+        <img src="/images/frameworks/vue.svg" class="w-12 h-12 p-1" loading="lazy" alt="Vue logo"/>
+      {% elif example.framework === 'Angular' %}
+        <img src="/images/frameworks/angular.svg" class="w-12 h-12 p-1" loading="lazy" alt="Angular logo"/>
+      {% elif example.framework === 'Svelte' %}
+        <img src="/images/frameworks/svelte.svg" class="w-12 h-12 p-1" loading="lazy" alt="Svelte logo"/>
+      {% elif example.framework === 'Alpine' %}
+        <img src="/images/frameworks/alpine.svg" class="w-12 h-12 p-1" loading="lazy" alt="Alpine logo"/>
+      {% else %}
+        <span class="text-center text-white font-bold py-1 px-3 rounded-full bg-purple-500">
+          {{ example.framework }}
+        </span>
+      {% endif %}
     </div>
   </div>
 </a>
