--- a/packages/website/src/pages/docs/date-gallery/examples.njk
+++ b/packages/website/src/pages/docs/date-gallery/examples.njk
@@ -18,7 +18,7 @@ keywords: "DateGallery examples, DateGallery datepicker example, DateGallery car
 
   <div class="grid lg:grid-cols-2 gap-4">
     {% for example in examples %}
-      {% if example.for === 'DateGallery' %}
+      {% if example.component === 'DateGallery' %}
         {% include "../../../_includes/components/example.njk" %}
       {% endif %}
     {% endfor %}
