website: fixed title of Alpine api pages
It referenced Svelte instead of Alpine.

--- a/packages/website/src/pages/api/alpine/api-pages.njk
+++ b/packages/website/src/pages/api/alpine/api-pages.njk
@@ -6,7 +6,7 @@ pagination:
   size: 1
   alias: def
 eleventyComputed:
-  title: "{{ def.name }} | Svelte | API"
+  title: "{{ def.name }} | Alpine | API"
   description: "{{ def.name }} {{def.comment.shortText}}"
   keywords: "@uiloos/alpine {{ def.name }} API, {{ def.name }}"
 ---
