--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -21,6 +21,16 @@
         document.documentElement.classList.remove('dark')
       }
     </script>
+    
+    {% if config.environment == 'production' %}
+      <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "lij00e1bfg");
+      </script>
+    {% endif %}
 
     {% if description %}
       <meta name="description" content="{{ description }}">
@@ -50,7 +60,6 @@
   </head>
 
   <body class="font-inter antialiased bg-white text-gray-900 dark:bg-black dark:text-white tracking-tight flex flex-col min-h-screen">
-
     {% include "../components/navigation.njk" %}
 
     <!-- Page content -->
@@ -88,5 +97,4 @@
 
     <script src="/assets/main.js"></script>
   </body>
-
 </html>
